day4/10_wordpress_with_secrets/solution/deployment.wordpress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
  labels:
    app: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      name: wordpress-pod
      labels:
        app: wordpress
    spec:
      containers:
      - name: wordpress-container
        image: wordpress:php7.4
        ports:
          - containerPort: 80
