day4/10_wordpress_with_secrets/solution/service.wordpress.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
spec:
  selector:
    app: wordpress
  ports:
  - protocol: TCP
    port: 80
    nodePort: 31519
  type: NodePort
